--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 
   <body>
     <div class="input-area">
-      <input placeholder="TODO入力" />
-      <button>追加</button>
+      <input id="add-text" placeholder="TODO入力" />
+      <button id="add-button">追加</button>
     </div>
     <div class="incomplete-area">
-      <p>未完了のTODO</p>
-      <ul>
-        <li>
-          <p>TODOです。</p>
+      <p class="title">未完了のTODO</p>
+      <ul id="incomplete-list">
+        <li class="list-row">
+          <p class="todo">TODOです。</p>
           <button>完了</button>
           <button>削除</button>
         </li>
       </ul>
     </div>
     <div class="complete-area">
-      <p>完了したTODO</p>
-      <ul>
-        <li>
-          <p>TODOでした。</p>
+      <p class="title">完了したTODO</p>
+      <ul id="complete-list">
+        <li class="list-row">
+          <p class="todo">TODOでした。</p>
           <button>戻す</button>
         </li>
       </ul>
